optimized news pages for mobile and fixed some layout bugs

--- a/Seasoning/general/static/css/base/mobile.scss
+++ b/Seasoning/general/static/css/base/mobile.scss
@@ -59,5 +59,5 @@
 }
 
 #header-margin {
-	padding-top: 50px;
+	padding-top: 60px;
 }
