--- a/Seasoning/news/static/css/news/news.scss
+++ b/Seasoning/news/static/css/news/news.scss
@@ -60,3 +60,10 @@
 
 #twitter-feed-wrapper .ajax-loader {
   margin: 10px auto; }
+  
+@media only screen and (max-width: 768px) {
+	#twitter-feed-wrapper {
+		float: none;
+		margin: auto;
+	}
+}
